samples/_failures_safe/1761073114_b8f697_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4904b21f.c: In function ‘main’:
./samples/SAFE/__tmp_4904b21f.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_4904b21f.c:140:9: error: expected declaration or statement at end of input
